--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -12,9 +12,10 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@alchemy/aa-accounts": "^1.2.0",
-    "@alchemy/aa-alchemy": "^1.2.0",
-    "@alchemy/aa-core": "^1.2.0",
+    "@alchemy/aa-accounts": "^3.8.2-alpha.1",
+    "@alchemy/aa-alchemy": "^3.9.0-alpha.3",
+    "@alchemy/aa-core": "^3.8.2-alpha.1",
+    "@alchemy/aa-signers": "^3.8.2-alpha.1",
     "@supabase/ssr": "^0.3.0",
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-query-devtools": "^5.29.2",
