--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -77,6 +77,7 @@
     "lucide-react": "^0.263.1",
     "next": "^14.2.2",
     "next-themes": "^0.2.1",
+    "openai": "^4.38.3",
     "promise": "^8.3.0",
     "react": "^18.2.0",
     "react-aria": "^3.30.0",
