--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -1,7 +1,7 @@
 {
     "functions": {
-        "app/api/*": {
-            "maxDuration": 120
+        "app/api/**/*": {
+            "maxDuration": 200
         }
     }
 }
