--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -31,6 +31,7 @@
     "expo-constants": "~14.4.2",
     "expo-crypto": "~12.4.1",
     "expo-image": "~1.3.5",
+    "expo-linear-gradient": "^12.7.2",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
     "expo-secure-store": "~12.3.1",
@@ -52,6 +53,7 @@
     "supabase": "*",
     "superjson": "1.13.1",
     "tailwindcss": "3.3.2",
+    "toastify-react-native": "^5.0.0",
     "uuid": "3.4.0"
   },
   "devDependencies": {
