--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -17,7 +17,11 @@
     "src",
     "*.ts",
     "index.tsx",
-    "*.js"
+    "*.js",
+    "**/*.ts",
+    "**/*.tsx",
+    "**/**/*.ts",
+    "**/**/*.tsx"
   ],
   "exclude": [
     "node_modules"
