--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -7,13 +7,13 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "dev": "expo start"
+    "dev": "expo start --reset-cache"
   },
   "dependencies": {
     "@expo/html-elements": "^0.5.1",
-    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@rneui/themed": "^4.0.0-rc.8",
-    "@stripe/stripe-react-native": "0.28.0",
+    "@stripe/stripe-react-native": "^0.37.2",
     "@supabase/supabase-js": "^2.38.3",
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-query-devtools": "^5.29.2",
@@ -25,29 +25,30 @@
     "autoprefixer": "^10.4.16",
     "css-select": "^5.1.0",
     "css-tree": "^2.3.1",
-    "expo": "~49.0.13",
-    "expo-barcode-scanner": "~12.5.3",
-    "expo-camera": "~13.4.4",
-    "expo-constants": "~14.4.2",
-    "expo-crypto": "~12.4.1",
-    "expo-image": "~1.3.5",
-    "expo-linear-gradient": "^12.7.2",
-    "expo-linking": "~5.0.2",
-    "expo-router": "^2.0.0",
-    "expo-secure-store": "~12.3.1",
-    "expo-status-bar": "~1.6.0",
-    "expo-system-ui": "^2.9.3",
+    "expo": "^51.0.2",
+    "expo-barcode-scanner": "~13.0.1",
+    "expo-camera": "~15.0.5",
+    "expo-constants": "~16.0.1",
+    "expo-crypto": "~13.0.2",
+    "expo-image": "~1.12.9",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.11",
+    "expo-secure-store": "~13.0.1",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.4",
     "nativewind": "2.0.5",
     "postcss": "^8.4.23",
     "postcss-calc": "^8.2.4",
     "postcss-loader": "^7.3.3",
     "react": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.74.1",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "3.10.0",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-qr-code": "^2.0.12",
     "supabase": "*",
