--- a/scripts/package.json
+++ b/scripts/package.json
@@ -11,11 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@filebase/sdk": "^1.0.4",
     "@supabase/supabase-js": "^2.36.0",
     "dotenv": "^16.3.1",
     "files-from-path": "^1.0.0",
     "fs": "^0.0.1-security",
-    "nft.storage": "^7.1.1",
     "path": "^0.12.7"
   },
   "devDependencies": {
