--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -55,7 +55,8 @@
     "superjson": "1.13.1",
     "tailwindcss": "3.3.2",
     "toastify-react-native": "^5.0.0",
-    "uuid": "3.4.0"
+    "uuid": "3.4.0",
+    "lottie-react-native": "6.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
