--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -83,6 +83,7 @@
     "react-hook-form": "^7.45.4",
     "react-qr-code": "^2.0.12",
     "react-stately": "^3.28.0",
+    "replicate": "^0.30.1",
     "sharp": "^0.32.6",
     "sonner": "^1.3.1",
     "stripe": "^14.2.0",
